[feat] - remove product flow